# DeePC

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  example.py  example_10d.ipynb  example_10d.py  example_1d.ipynb  example_1d.py  example_3d.ipynb  example_3d.py  example_3d_b.py  example_3d_fail.py  example_3d_interactive.ipynb  example_3d_non_diag_values.py  example_3d_regularized.py  examples.ipynb  pyproject.toml
.github/workflows/: c-cpp.yml  python-package.yml
cmake/: DeePCppConfig.cmake.in
examples/: CMakeLists.txt  cpp_1d.cpp  example_10d.py  example_1d.py  example_3d_non_diag_values.py  example_3d_nonlin_trajectory.py  python_10d.ipynb  python_1d.ipynb  python_3d.ipynb  python_3d_interactive.ipynb
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/deepc/: __init__.py  controller.py  deepc.py  lti.py  lti_in_progress.py  math.py  math_deepc.py
src/deepcpp/: CMakeLists.txt  algorithm.cpp  algorithm.h  controller.cpp  controller.h  deepc.cpp  deepc.h  finite_queue.cpp  finite_queue.h  lti.cpp  lti.h  matrix.cpp  matrix.h  vector.cpp  vector.h
tests/deepc/: test_controller.py  test_deepc.py  test_lti.py  test_math.py
tests/deepc/helpers/: __init__.py
tests/deepc_tests/: test_controller.py  test_deepc.py
tests/deepcpp/: CMakeLists.txt  helpers.h  test_algorithm.cpp  test_controller.cpp  test_deepc.cpp  test_helpers.cpp  test_lti.cpp  test_math.cpp  test_matrix.cpp  test_vector.cpp
