[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "deepc"
version = "1.0.1"
requires-python = ">= 3.10"
dependencies = [
    "numpy",
]

[tool.ruff]
line-length = 120

[tool.pylint]
disable = [
    "C0103",  # Invalid variable name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function or method docstring
]
